// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vba parser parse comment and line continuation correctly 2`] = `
"{
  'start': 0,
  'end': 57,
  'firstLine': 1,
  'lastLine': 12,
  'firstColumn': 1,
  'lastColumn': 1,
  'symbol': 'progam',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 2,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'endOfLine',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 2,
          'firstColumn': 1,
          'lastColumn': 1,
          'token': 'NEWLINE',
          'type': 'token',
          'text': '\\\\n'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 1,
      'end': 57,
      'firstLine': 2,
      'lastLine': 12,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'moduleBody',
      'type': 'symbol',
      'children': [
        {
          'start': 1,
          'end': 56,
          'firstLine': 2,
          'lastLine': 11,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'moduleBodyElement',
          'type': 'symbol',
          'children': [
            {
              'start': 1,
              'end': 56,
              'firstLine': 2,
              'lastLine': 11,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'subStmt',
              'type': 'symbol',
              'children': [
                {
                  'start': 1,
                  'end': 4,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 1,
                  'lastColumn': 4,
                  'token': 'SUB',
                  'type': 'token',
                  'text': 'sub'
                },
                {
                  'start': 5,
                  'end': 9,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 5,
                  'lastColumn': 9,
                  'symbol': 'certainIdentifier',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 5,
                      'end': 9,
                      'firstLine': 2,
                      'lastLine': 2,
                      'firstColumn': 5,
                      'lastColumn': 9,
                      'token': 'IDENTIFIER',
                      'type': 'token',
                      'text': 'main'
                    }
                  ],
                  'ruleIndex': 202,
                  'internalRuleIndex': 334,
                  'id': 7
                },
                {
                  'start': 9,
                  'end': 40,
                  'firstLine': 2,
                  'lastLine': 8,
                  'firstColumn': 9,
                  'lastColumn': 1,
                  'symbol': 'endOfStatement',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 9,
                      'end': 10,
                      'firstLine': 2,
                      'lastLine': 3,
                      'firstColumn': 9,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 9,
                          'end': 10,
                          'firstLine': 2,
                          'lastLine': 3,
                          'firstColumn': 9,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 2,
                      'id': 9
                    },
                    {
                      'start': 10,
                      'end': 23,
                      'firstLine': 3,
                      'lastLine': 4,
                      'firstColumn': 1,
                      'lastColumn': 8,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 10,
                          'end': 23,
                          'firstLine': 3,
                          'lastLine': 4,
                          'firstColumn': 1,
                          'lastColumn': 8,
                          'token': 'COMMENT',
                          'type': 'token',
                          'text': '' x _\\\\nsdfasdf'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 3,
                      'id': 10
                    },
                    {
                      'start': 23,
                      'end': 24,
                      'firstLine': 4,
                      'lastLine': 5,
                      'firstColumn': 8,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 23,
                          'end': 24,
                          'firstLine': 4,
                          'lastLine': 5,
                          'firstColumn': 8,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 2,
                      'id': 11
                    },
                    {
                      'start': 24,
                      'end': 38,
                      'firstLine': 5,
                      'lastLine': 6,
                      'firstColumn': 1,
                      'lastColumn': 4,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 24,
                          'end': 38,
                          'firstLine': 5,
                          'lastLine': 6,
                          'firstColumn': 1,
                          'lastColumn': 4,
                          'token': 'REMCOMMENT',
                          'type': 'token',
                          'text': 'rem xxxx _\\\\nyyy'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 4,
                      'id': 12
                    },
                    {
                      'start': 38,
                      'end': 40,
                      'firstLine': 6,
                      'lastLine': 8,
                      'firstColumn': 4,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 38,
                          'end': 40,
                          'firstLine': 6,
                          'lastLine': 8,
                          'firstColumn': 4,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n\\\\n'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 2,
                      'id': 13
                    }
                  ],
                  'ruleIndex': 3,
                  'internalRuleIndex': 9,
                  'id': 8
                },
                {
                  'start': 40,
                  'end': 49,
                  'firstLine': 8,
                  'lastLine': 11,
                  'firstColumn': 1,
                  'lastColumn': 1,
                  'symbol': 'block',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 40,
                      'end': 47,
                      'firstLine': 8,
                      'lastLine': 9,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 40,
                          'end': 47,
                          'firstLine': 8,
                          'lastLine': 9,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'symbol': 'letStmt',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 40,
                              'end': 41,
                              'firstLine': 8,
                              'lastLine': 8,
                              'firstColumn': 1,
                              'lastColumn': 2,
                              'symbol': 'implicitCallStmt_InStmt',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 40,
                                  'end': 41,
                                  'firstLine': 8,
                                  'lastLine': 8,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'symbol': 'iCS_S_VariableOrProcedureCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 40,
                                      'end': 41,
                                      'firstLine': 8,
                                      'lastLine': 8,
                                      'firstColumn': 1,
                                      'lastColumn': 2,
                                      'symbol': 'certainIdentifier',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 40,
                                          'end': 41,
                                          'firstLine': 8,
                                          'lastLine': 8,
                                          'firstColumn': 1,
                                          'lastColumn': 2,
                                          'token': 'IDENTIFIER',
                                          'type': 'token',
                                          'text': 'x'
                                        }
                                      ],
                                      'ruleIndex': 202,
                                      'internalRuleIndex': 334,
                                      'id': 19
                                    }
                                  ],
                                  'ruleIndex': 95,
                                  'internalRuleIndex': 197,
                                  'id': 18
                                }
                              ],
                              'ruleIndex': 89,
                              'internalRuleIndex': 176,
                              'id': 17
                            },
                            {
                              'start': 42,
                              'end': 43,
                              'firstLine': 8,
                              'lastLine': 8,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': 'EQ',
                              'type': 'token',
                              'text': '='
                            },
                            {
                              'start': 46,
                              'end': 47,
                              'firstLine': 9,
                              'lastLine': 9,
                              'firstColumn': 1,
                              'lastColumn': 2,
                              'symbol': 'valueStmt',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 46,
                                  'end': 47,
                                  'firstLine': 9,
                                  'lastLine': 9,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'symbol': 'literal',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 46,
                                      'end': 47,
                                      'firstLine': 9,
                                      'lastLine': 9,
                                      'firstColumn': 1,
                                      'lastColumn': 2,
                                      'token': 'INTEGERLITERAL',
                                      'type': 'token',
                                      'text': '1'
                                    }
                                  ],
                                  'ruleIndex': 97,
                                  'internalRuleIndex': 200,
                                  'id': 28
                                }
                              ],
                              'ruleIndex': 88,
                              'internalRuleIndex': 336,
                              'id': 20,
                              'isWrap': true
                            }
                          ],
                          'ruleIndex': 46,
                          'internalRuleIndex': 124,
                          'id': 16
                        }
                      ],
                      'ruleIndex': 18,
                      'internalRuleIndex': 58,
                      'id': 15
                    },
                    {
                      'start': 47,
                      'end': 49,
                      'firstLine': 9,
                      'lastLine': 11,
                      'firstColumn': 2,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 47,
                          'end': 49,
                          'firstLine': 9,
                          'lastLine': 11,
                          'firstColumn': 2,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 47,
                              'end': 49,
                              'firstLine': 9,
                              'lastLine': 11,
                              'firstColumn': 2,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n\\\\n'
                            }
                          ],
                          'ruleIndex': 2,
                          'internalRuleIndex': 2,
                          'id': 35
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 9,
                      'id': 34
                    }
                  ],
                  'ruleIndex': 17,
                  'internalRuleIndex': 40,
                  'id': 14
                },
                {
                  'start': 49,
                  'end': 56,
                  'firstLine': 11,
                  'lastLine': 11,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'token': 'END_SUB',
                  'type': 'token',
                  'text': 'end sub'
                }
              ],
              'ruleIndex': 12,
              'internalRuleIndex': 34,
              'id': 6
            }
          ],
          'ruleIndex': 10,
          'internalRuleIndex': 29,
          'id': 5
        },
        {
          'start': 56,
          'end': 57,
          'firstLine': 11,
          'lastLine': 12,
          'firstColumn': 8,
          'lastColumn': 1,
          'symbol': 'endOfLine',
          'type': 'symbol',
          'children': [
            {
              'start': 56,
              'end': 57,
              'firstLine': 11,
              'lastLine': 12,
              'firstColumn': 8,
              'lastColumn': 1,
              'token': 'NEWLINE',
              'type': 'token',
              'text': '\\\\n'
            }
          ],
          'ruleIndex': 2,
          'internalRuleIndex': 2,
          'id': 36
        }
      ],
      'ruleIndex': 9,
      'internalRuleIndex': 24,
      'id': 4
    },
    {
      'start': 57,
      'end': 57,
      'firstLine': 12,
      'lastLine': 12,
      'firstColumn': 1,
      'lastColumn': 1,
      'token': '$EOF',
      'type': 'token',
      'text': ''
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`vba parser parse correctly 2`] = `
"{
  'start': 0,
  'end': 27,
  'firstLine': 1,
  'lastLine': 5,
  'firstColumn': 1,
  'lastColumn': 1,
  'symbol': 'progam',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 2,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'endOfLine',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 2,
          'firstColumn': 1,
          'lastColumn': 1,
          'token': 'NEWLINE',
          'type': 'token',
          'text': '\\\\n'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 1,
      'end': 27,
      'firstLine': 2,
      'lastLine': 5,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'moduleBody',
      'type': 'symbol',
      'children': [
        {
          'start': 1,
          'end': 26,
          'firstLine': 2,
          'lastLine': 4,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'moduleBodyElement',
          'type': 'symbol',
          'children': [
            {
              'start': 1,
              'end': 26,
              'firstLine': 2,
              'lastLine': 4,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'subStmt',
              'type': 'symbol',
              'children': [
                {
                  'start': 1,
                  'end': 4,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 1,
                  'lastColumn': 4,
                  'token': 'SUB',
                  'type': 'token',
                  'text': 'sub'
                },
                {
                  'start': 5,
                  'end': 9,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 5,
                  'lastColumn': 9,
                  'symbol': 'certainIdentifier',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 5,
                      'end': 9,
                      'firstLine': 2,
                      'lastLine': 2,
                      'firstColumn': 5,
                      'lastColumn': 9,
                      'token': 'IDENTIFIER',
                      'type': 'token',
                      'text': 'main'
                    }
                  ],
                  'ruleIndex': 202,
                  'internalRuleIndex': 334,
                  'id': 7
                },
                {
                  'start': 9,
                  'end': 10,
                  'firstLine': 2,
                  'lastLine': 3,
                  'firstColumn': 9,
                  'lastColumn': 1,
                  'symbol': 'endOfStatement',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 9,
                      'end': 10,
                      'firstLine': 2,
                      'lastLine': 3,
                      'firstColumn': 9,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 9,
                          'end': 10,
                          'firstLine': 2,
                          'lastLine': 3,
                          'firstColumn': 9,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 2,
                      'id': 9
                    }
                  ],
                  'ruleIndex': 3,
                  'internalRuleIndex': 9,
                  'id': 8
                },
                {
                  'start': 10,
                  'end': 19,
                  'firstLine': 3,
                  'lastLine': 4,
                  'firstColumn': 1,
                  'lastColumn': 1,
                  'symbol': 'block',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 10,
                      'end': 18,
                      'firstLine': 3,
                      'lastLine': 3,
                      'firstColumn': 1,
                      'lastColumn': 9,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 10,
                          'end': 18,
                          'firstLine': 3,
                          'lastLine': 3,
                          'firstColumn': 1,
                          'lastColumn': 9,
                          'symbol': 'implicitCallStmt_InBlock',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 10,
                              'end': 18,
                              'firstLine': 3,
                              'lastLine': 3,
                              'firstColumn': 1,
                              'lastColumn': 9,
                              'symbol': 'iCS_B_ProcedureCall',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 10,
                                  'end': 16,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 1,
                                  'lastColumn': 7,
                                  'symbol': 'certainIdentifier',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 10,
                                      'end': 16,
                                      'firstLine': 3,
                                      'lastLine': 3,
                                      'firstColumn': 1,
                                      'lastColumn': 7,
                                      'token': 'IDENTIFIER',
                                      'type': 'token',
                                      'text': 'msgbox'
                                    }
                                  ],
                                  'ruleIndex': 202,
                                  'internalRuleIndex': 334,
                                  'id': 14
                                },
                                {
                                  'start': 17,
                                  'end': 18,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 8,
                                  'lastColumn': 9,
                                  'symbol': 'argsCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 17,
                                      'end': 18,
                                      'firstLine': 3,
                                      'lastLine': 3,
                                      'firstColumn': 8,
                                      'lastColumn': 9,
                                      'symbol': 'argCall',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 17,
                                          'end': 18,
                                          'firstLine': 3,
                                          'lastLine': 3,
                                          'firstColumn': 8,
                                          'lastColumn': 9,
                                          'symbol': 'valueStmt',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 17,
                                              'end': 18,
                                              'firstLine': 3,
                                              'lastLine': 3,
                                              'firstColumn': 8,
                                              'lastColumn': 9,
                                              'symbol': 'literal',
                                              'type': 'symbol',
                                              'children': [
                                                {
                                                  'start': 17,
                                                  'end': 18,
                                                  'firstLine': 3,
                                                  'lastLine': 3,
                                                  'firstColumn': 8,
                                                  'lastColumn': 9,
                                                  'token': 'INTEGERLITERAL',
                                                  'type': 'token',
                                                  'text': '1'
                                                }
                                              ],
                                              'ruleIndex': 97,
                                              'internalRuleIndex': 200,
                                              'id': 25
                                            }
                                          ],
                                          'ruleIndex': 88,
                                          'internalRuleIndex': 336,
                                          'id': 17,
                                          'isWrap': true
                                        }
                                      ],
                                      'ruleIndex': 55,
                                      'internalRuleIndex': 144,
                                      'id': 16
                                    }
                                  ],
                                  'ruleIndex': 54,
                                  'internalRuleIndex': 143,
                                  'id': 15
                                }
                              ],
                              'ruleIndex': 53,
                              'internalRuleIndex': 141,
                              'id': 13
                            }
                          ],
                          'ruleIndex': 51,
                          'internalRuleIndex': 137,
                          'id': 12
                        }
                      ],
                      'ruleIndex': 18,
                      'internalRuleIndex': 60,
                      'id': 11
                    },
                    {
                      'start': 18,
                      'end': 19,
                      'firstLine': 3,
                      'lastLine': 4,
                      'firstColumn': 9,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 18,
                          'end': 19,
                          'firstLine': 3,
                          'lastLine': 4,
                          'firstColumn': 9,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 18,
                              'end': 19,
                              'firstLine': 3,
                              'lastLine': 4,
                              'firstColumn': 9,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n'
                            }
                          ],
                          'ruleIndex': 2,
                          'internalRuleIndex': 2,
                          'id': 32
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 9,
                      'id': 31
                    }
                  ],
                  'ruleIndex': 17,
                  'internalRuleIndex': 40,
                  'id': 10
                },
                {
                  'start': 19,
                  'end': 26,
                  'firstLine': 4,
                  'lastLine': 4,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'token': 'END_SUB',
                  'type': 'token',
                  'text': 'end sub'
                }
              ],
              'ruleIndex': 12,
              'internalRuleIndex': 34,
              'id': 6
            }
          ],
          'ruleIndex': 10,
          'internalRuleIndex': 29,
          'id': 5
        },
        {
          'start': 26,
          'end': 27,
          'firstLine': 4,
          'lastLine': 5,
          'firstColumn': 8,
          'lastColumn': 1,
          'symbol': 'endOfLine',
          'type': 'symbol',
          'children': [
            {
              'start': 26,
              'end': 27,
              'firstLine': 4,
              'lastLine': 5,
              'firstColumn': 8,
              'lastColumn': 1,
              'token': 'NEWLINE',
              'type': 'token',
              'text': '\\\\n'
            }
          ],
          'ruleIndex': 2,
          'internalRuleIndex': 2,
          'id': 33
        }
      ],
      'ruleIndex': 9,
      'internalRuleIndex': 24,
      'id': 4
    },
    {
      'start': 27,
      'end': 27,
      'firstLine': 5,
      'lastLine': 5,
      'firstColumn': 1,
      'lastColumn': 1,
      'token': '$EOF',
      'type': 'token',
      'text': ''
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`vba parser report error when extra ; 2`] = `
"{
  'start': 0,
  'end': 0,
  'firstLine': 1,
  'lastLine': 0,
  'firstColumn': 1,
  'lastColumn': 0,
  'symbol': 'progam',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 2,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'endOfLine',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 2,
          'firstColumn': 1,
          'lastColumn': 1,
          'token': 'NEWLINE',
          'type': 'token',
          'text': '\\\\n'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 0,
      'end': 0,
      'firstLine': 0,
      'lastLine': 0,
      'firstColumn': 0,
      'lastColumn': 0,
      'symbol': 'moduleBody',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 0,
          'firstLine': 0,
          'lastLine': 0,
          'firstColumn': 0,
          'lastColumn': 0,
          'symbol': 'moduleBodyElement',
          'type': 'symbol',
          'children': [
            {
              'start': 5,
              'end': 0,
              'firstLine': 2,
              'lastLine': 0,
              'firstColumn': 5,
              'lastColumn': 0,
              'symbol': 'subStmt',
              'type': 'symbol',
              'children': [
                {
                  'start': 5,
                  'end': 8,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 5,
                  'lastColumn': 8,
                  'token': 'SUB',
                  'type': 'token',
                  'text': 'sub'
                },
                {
                  'start': 9,
                  'end': 13,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 9,
                  'lastColumn': 13,
                  'symbol': 'certainIdentifier',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 9,
                      'end': 13,
                      'firstLine': 2,
                      'lastLine': 2,
                      'firstColumn': 9,
                      'lastColumn': 13,
                      'token': 'IDENTIFIER',
                      'type': 'token',
                      'text': 'main'
                    }
                  ],
                  'ruleIndex': 202,
                  'internalRuleIndex': 334,
                  'id': 7
                },
                {
                  'start': 13,
                  'end': 14,
                  'firstLine': 2,
                  'lastLine': 3,
                  'firstColumn': 13,
                  'lastColumn': 1,
                  'symbol': 'endOfStatement',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 13,
                      'end': 14,
                      'firstLine': 2,
                      'lastLine': 3,
                      'firstColumn': 13,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 13,
                          'end': 14,
                          'firstLine': 2,
                          'lastLine': 3,
                          'firstColumn': 13,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 2,
                      'id': 9
                    }
                  ],
                  'ruleIndex': 3,
                  'internalRuleIndex': 9,
                  'id': 8
                },
                {
                  'start': 18,
                  'end': 0,
                  'firstLine': 3,
                  'lastLine': 0,
                  'firstColumn': 5,
                  'lastColumn': 0,
                  'symbol': 'block',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 18,
                      'end': 26,
                      'firstLine': 3,
                      'lastLine': 3,
                      'firstColumn': 5,
                      'lastColumn': 13,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 18,
                          'end': 26,
                          'firstLine': 3,
                          'lastLine': 3,
                          'firstColumn': 5,
                          'lastColumn': 13,
                          'symbol': 'implicitCallStmt_InBlock',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 18,
                              'end': 26,
                              'firstLine': 3,
                              'lastLine': 3,
                              'firstColumn': 5,
                              'lastColumn': 13,
                              'symbol': 'iCS_B_ProcedureCall',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 18,
                                  'end': 24,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 5,
                                  'lastColumn': 11,
                                  'symbol': 'certainIdentifier',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 18,
                                      'end': 24,
                                      'firstLine': 3,
                                      'lastLine': 3,
                                      'firstColumn': 5,
                                      'lastColumn': 11,
                                      'token': 'IDENTIFIER',
                                      'type': 'token',
                                      'text': 'msgbox'
                                    }
                                  ],
                                  'ruleIndex': 202,
                                  'internalRuleIndex': 334,
                                  'id': 14
                                },
                                {
                                  'start': 25,
                                  'end': 26,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 12,
                                  'lastColumn': 13,
                                  'symbol': 'argsCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 25,
                                      'end': 26,
                                      'firstLine': 3,
                                      'lastLine': 3,
                                      'firstColumn': 12,
                                      'lastColumn': 13,
                                      'symbol': 'argCall',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 25,
                                          'end': 26,
                                          'firstLine': 3,
                                          'lastLine': 3,
                                          'firstColumn': 12,
                                          'lastColumn': 13,
                                          'symbol': 'valueStmt',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 25,
                                              'end': 26,
                                              'firstLine': 3,
                                              'lastLine': 3,
                                              'firstColumn': 12,
                                              'lastColumn': 13,
                                              'symbol': 'literal',
                                              'type': 'symbol',
                                              'children': [
                                                {
                                                  'start': 25,
                                                  'end': 26,
                                                  'firstLine': 3,
                                                  'lastLine': 3,
                                                  'firstColumn': 12,
                                                  'lastColumn': 13,
                                                  'token': 'INTEGERLITERAL',
                                                  'type': 'token',
                                                  'text': '1'
                                                }
                                              ],
                                              'ruleIndex': 97,
                                              'internalRuleIndex': 200,
                                              'id': 25
                                            }
                                          ],
                                          'ruleIndex': 88,
                                          'internalRuleIndex': 336,
                                          'id': 17,
                                          'isWrap': true
                                        }
                                      ],
                                      'ruleIndex': 55,
                                      'internalRuleIndex': 144,
                                      'id': 16
                                    }
                                  ],
                                  'ruleIndex': 54,
                                  'internalRuleIndex': 143,
                                  'id': 15
                                }
                              ],
                              'ruleIndex': 53,
                              'internalRuleIndex': 141,
                              'id': 13
                            }
                          ],
                          'ruleIndex': 51,
                          'internalRuleIndex': 137,
                          'id': 12
                        }
                      ],
                      'ruleIndex': 18,
                      'internalRuleIndex': 60,
                      'id': 11
                    },
                    {
                      'start': 26,
                      'end': 27,
                      'firstLine': 3,
                      'lastLine': 4,
                      'firstColumn': 13,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 26,
                          'end': 27,
                          'firstLine': 3,
                          'lastLine': 4,
                          'firstColumn': 13,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 26,
                              'end': 27,
                              'firstLine': 3,
                              'lastLine': 4,
                              'firstColumn': 13,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n'
                            }
                          ],
                          'ruleIndex': 2,
                          'internalRuleIndex': 2,
                          'id': 32
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 9,
                      'id': 31
                    },
                    {
                      'start': 0,
                      'end': 0,
                      'firstLine': 0,
                      'lastLine': 0,
                      'firstColumn': 0,
                      'lastColumn': 0,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 0,
                          'firstLine': 0,
                          'lastLine': 0,
                          'firstColumn': 0,
                          'lastColumn': 0,
                          'symbol': 'implicitCallStmt_InBlock',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 31,
                              'end': 0,
                              'firstLine': 4,
                              'lastLine': 0,
                              'firstColumn': 5,
                              'lastColumn': 0,
                              'symbol': 'iCS_B_ProcedureCall',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 31,
                                  'end': 37,
                                  'firstLine': 4,
                                  'lastLine': 4,
                                  'firstColumn': 5,
                                  'lastColumn': 11,
                                  'symbol': 'certainIdentifier',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 31,
                                      'end': 37,
                                      'firstLine': 4,
                                      'lastLine': 4,
                                      'firstColumn': 5,
                                      'lastColumn': 11,
                                      'token': 'IDENTIFIER',
                                      'type': 'token',
                                      'text': 'msgbox'
                                    }
                                  ],
                                  'ruleIndex': 202,
                                  'internalRuleIndex': 334,
                                  'id': 36
                                },
                                {
                                  'start': 0,
                                  'end': 0,
                                  'firstLine': 0,
                                  'lastLine': 0,
                                  'firstColumn': 0,
                                  'lastColumn': 0,
                                  'symbol': 'argsCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 0,
                                      'end': 0,
                                      'firstLine': 0,
                                      'lastLine': 0,
                                      'firstColumn': 0,
                                      'lastColumn': 0,
                                      'symbol': 'argCall',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 38,
                                          'end': 40,
                                          'firstLine': 4,
                                          'lastLine': 4,
                                          'firstColumn': 12,
                                          'lastColumn': 14,
                                          'symbol': 'valueStmt',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 38,
                                              'end': 39,
                                              'firstLine': 4,
                                              'lastLine': 4,
                                              'firstColumn': 12,
                                              'lastColumn': 13,
                                              'symbol': 'valueStmt',
                                              'type': 'symbol',
                                              'children': [
                                                {
                                                  'start': 38,
                                                  'end': 39,
                                                  'firstLine': 4,
                                                  'lastLine': 4,
                                                  'firstColumn': 12,
                                                  'lastColumn': 13,
                                                  'symbol': 'literal',
                                                  'type': 'symbol',
                                                  'children': [
                                                    {
                                                      'start': 38,
                                                      'end': 39,
                                                      'firstLine': 4,
                                                      'lastLine': 4,
                                                      'firstColumn': 12,
                                                      'lastColumn': 13,
                                                      'token': 'INTEGERLITERAL',
                                                      'type': 'token',
                                                      'text': '2'
                                                    }
                                                  ],
                                                  'ruleIndex': 97,
                                                  'internalRuleIndex': 200,
                                                  'id': 47
                                                }
                                              ],
                                              'ruleIndex': 85,
                                              'internalRuleIndex': 361,
                                              'id': 44,
                                              'isWrap': true
                                            },
                                            {
                                              'start': 39,
                                              'end': 40,
                                              'firstLine': 4,
                                              'lastLine': 4,
                                              'firstColumn': 13,
                                              'lastColumn': 14,
                                              'token': '$UNKNOWN',
                                              'type': 'token',
                                              'text': ';',
                                              'error': {
                                                'recovery': false,
                                                'errorMessage': 'syntax error at line 4:\\\\n\\\\n    sub main\\\\n    msgbox 1\\\\n    msgbox 2;\\\\n------------^\\\\n    msgbox 3\\\\n    end sub\\\\n    \\\\n'COLON', 'REMCOMMENT', 'COMMENT', 'NEWLINE', 'LPAREN', ',', 'EQ', 'NEQ', 'LT', 'GT', 'LEQ', 'GEQ', 'ISNOT', 'IS', 'AND', 'OR', 'XOR', 'AMPERSAND', 'MINUS', 'PLUS', 'MOD', 'IDIV', 'DIV', 'MULT', 'POW' expected.\\\\ncurrent token: '$UNKNOWN'.',
                                                'tip': ''COLON', 'REMCOMMENT', 'COMMENT', 'NEWLINE', 'LPAREN', ',', 'EQ', 'NEQ', 'LT', 'GT', 'LEQ', 'GEQ', 'ISNOT', 'IS', 'AND', 'OR', 'XOR', 'AMPERSAND', 'MINUS', 'PLUS', 'MOD', 'IDIV', 'DIV', 'MULT', 'POW' expected.\\\\ncurrent token: '$UNKNOWN'.',
                                                'expected': [
                                                  'COLON',
                                                  'REMCOMMENT',
                                                  'COMMENT',
                                                  'NEWLINE',
                                                  'LPAREN',
                                                  ',',
                                                  'EQ',
                                                  'NEQ',
                                                  'LT',
                                                  'GT',
                                                  'LEQ',
                                                  'GEQ',
                                                  'ISNOT',
                                                  'IS',
                                                  'AND',
                                                  'OR',
                                                  'XOR',
                                                  'AMPERSAND',
                                                  'MINUS',
                                                  'PLUS',
                                                  'MOD',
                                                  'IDIV',
                                                  'DIV',
                                                  'MULT',
                                                  'POW'
                                                ],
                                                'symbol': 'valueStmt',
                                                'token': {
                                                  'text': ';',
                                                  'token': '$UNKNOWN',
                                                  't': '$UNKNOWN',
                                                  'start': 39,
                                                  'end': 40,
                                                  'firstLine': 4,
                                                  'lastLine': 4,
                                                  'firstColumn': 13,
                                                  'lastColumn': 14
                                                }
                                              }
                                            }
                                          ],
                                          'ruleIndex': 88,
                                          'internalRuleIndex': 336,
                                          'id': 39,
                                          'isWrap': true
                                        }
                                      ],
                                      'ruleIndex': 55,
                                      'internalRuleIndex': 144,
                                      'id': 38
                                    }
                                  ],
                                  'ruleIndex': 54,
                                  'internalRuleIndex': 143,
                                  'id': 37
                                }
                              ],
                              'ruleIndex': 53,
                              'internalRuleIndex': 141,
                              'id': 35
                            }
                          ],
                          'ruleIndex': 51,
                          'internalRuleIndex': 137,
                          'id': 34
                        }
                      ],
                      'ruleIndex': 18,
                      'internalRuleIndex': 60,
                      'id': 33
                    }
                  ],
                  'ruleIndex': 17,
                  'internalRuleIndex': 40,
                  'id': 10
                }
              ],
              'ruleIndex': 12,
              'internalRuleIndex': 34,
              'id': 6
            }
          ],
          'ruleIndex': 10,
          'internalRuleIndex': 29,
          'id': 5
        }
      ],
      'ruleIndex': 9,
      'internalRuleIndex': 24,
      'id': 4
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`vba parser report error when missing end sub 2`] = `
"{
  'start': 0,
  'end': 0,
  'firstLine': 1,
  'lastLine': 0,
  'firstColumn': 1,
  'lastColumn': 0,
  'symbol': 'progam',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 2,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'endOfLine',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 2,
          'firstColumn': 1,
          'lastColumn': 1,
          'token': 'NEWLINE',
          'type': 'token',
          'text': '\\\\n'
        }
      ],
      'ruleIndex': 2,
      'internalRuleIndex': 2,
      'id': 3
    },
    {
      'start': 0,
      'end': 0,
      'firstLine': 0,
      'lastLine': 0,
      'firstColumn': 0,
      'lastColumn': 0,
      'symbol': 'moduleBody',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 0,
          'firstLine': 0,
          'lastLine': 0,
          'firstColumn': 0,
          'lastColumn': 0,
          'symbol': 'moduleBodyElement',
          'type': 'symbol',
          'children': [
            {
              'start': 5,
              'end': 61,
              'firstLine': 2,
              'lastLine': 7,
              'firstColumn': 5,
              'lastColumn': 8,
              'symbol': 'subStmt',
              'type': 'symbol',
              'children': [
                {
                  'start': 5,
                  'end': 8,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 5,
                  'lastColumn': 8,
                  'token': 'SUB',
                  'type': 'token',
                  'text': 'sub'
                },
                {
                  'start': 9,
                  'end': 13,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 9,
                  'lastColumn': 13,
                  'symbol': 'certainIdentifier',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 9,
                      'end': 13,
                      'firstLine': 2,
                      'lastLine': 2,
                      'firstColumn': 9,
                      'lastColumn': 13,
                      'token': 'IDENTIFIER',
                      'type': 'token',
                      'text': 'main'
                    }
                  ],
                  'ruleIndex': 202,
                  'internalRuleIndex': 334,
                  'id': 7
                },
                {
                  'start': 13,
                  'end': 14,
                  'firstLine': 2,
                  'lastLine': 3,
                  'firstColumn': 13,
                  'lastColumn': 1,
                  'symbol': 'endOfStatement',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 13,
                      'end': 14,
                      'firstLine': 2,
                      'lastLine': 3,
                      'firstColumn': 13,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 13,
                          'end': 14,
                          'firstLine': 2,
                          'lastLine': 3,
                          'firstColumn': 13,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2,
                      'internalRuleIndex': 2,
                      'id': 9
                    }
                  ],
                  'ruleIndex': 3,
                  'internalRuleIndex': 9,
                  'id': 8
                },
                {
                  'start': 18,
                  'end': 54,
                  'firstLine': 3,
                  'lastLine': 7,
                  'firstColumn': 5,
                  'lastColumn': 1,
                  'symbol': 'block',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 18,
                      'end': 26,
                      'firstLine': 3,
                      'lastLine': 3,
                      'firstColumn': 5,
                      'lastColumn': 13,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 18,
                          'end': 26,
                          'firstLine': 3,
                          'lastLine': 3,
                          'firstColumn': 5,
                          'lastColumn': 13,
                          'symbol': 'implicitCallStmt_InBlock',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 18,
                              'end': 26,
                              'firstLine': 3,
                              'lastLine': 3,
                              'firstColumn': 5,
                              'lastColumn': 13,
                              'symbol': 'iCS_B_ProcedureCall',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 18,
                                  'end': 24,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 5,
                                  'lastColumn': 11,
                                  'symbol': 'certainIdentifier',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 18,
                                      'end': 24,
                                      'firstLine': 3,
                                      'lastLine': 3,
                                      'firstColumn': 5,
                                      'lastColumn': 11,
                                      'token': 'IDENTIFIER',
                                      'type': 'token',
                                      'text': 'msgbox'
                                    }
                                  ],
                                  'ruleIndex': 202,
                                  'internalRuleIndex': 334,
                                  'id': 14
                                },
                                {
                                  'start': 25,
                                  'end': 26,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 12,
                                  'lastColumn': 13,
                                  'symbol': 'argsCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 25,
                                      'end': 26,
                                      'firstLine': 3,
                                      'lastLine': 3,
                                      'firstColumn': 12,
                                      'lastColumn': 13,
                                      'symbol': 'argCall',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 25,
                                          'end': 26,
                                          'firstLine': 3,
                                          'lastLine': 3,
                                          'firstColumn': 12,
                                          'lastColumn': 13,
                                          'symbol': 'valueStmt',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 25,
                                              'end': 26,
                                              'firstLine': 3,
                                              'lastLine': 3,
                                              'firstColumn': 12,
                                              'lastColumn': 13,
                                              'symbol': 'literal',
                                              'type': 'symbol',
                                              'children': [
                                                {
                                                  'start': 25,
                                                  'end': 26,
                                                  'firstLine': 3,
                                                  'lastLine': 3,
                                                  'firstColumn': 12,
                                                  'lastColumn': 13,
                                                  'token': 'INTEGERLITERAL',
                                                  'type': 'token',
                                                  'text': '1'
                                                }
                                              ],
                                              'ruleIndex': 97,
                                              'internalRuleIndex': 200,
                                              'id': 25
                                            }
                                          ],
                                          'ruleIndex': 88,
                                          'internalRuleIndex': 336,
                                          'id': 17,
                                          'isWrap': true
                                        }
                                      ],
                                      'ruleIndex': 55,
                                      'internalRuleIndex': 144,
                                      'id': 16
                                    }
                                  ],
                                  'ruleIndex': 54,
                                  'internalRuleIndex': 143,
                                  'id': 15
                                }
                              ],
                              'ruleIndex': 53,
                              'internalRuleIndex': 141,
                              'id': 13
                            }
                          ],
                          'ruleIndex': 51,
                          'internalRuleIndex': 137,
                          'id': 12
                        }
                      ],
                      'ruleIndex': 18,
                      'internalRuleIndex': 60,
                      'id': 11
                    },
                    {
                      'start': 26,
                      'end': 27,
                      'firstLine': 3,
                      'lastLine': 4,
                      'firstColumn': 13,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 26,
                          'end': 27,
                          'firstLine': 3,
                          'lastLine': 4,
                          'firstColumn': 13,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 26,
                              'end': 27,
                              'firstLine': 3,
                              'lastLine': 4,
                              'firstColumn': 13,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n'
                            }
                          ],
                          'ruleIndex': 2,
                          'internalRuleIndex': 2,
                          'id': 32
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 9,
                      'id': 31
                    },
                    {
                      'start': 31,
                      'end': 39,
                      'firstLine': 4,
                      'lastLine': 4,
                      'firstColumn': 5,
                      'lastColumn': 13,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 31,
                          'end': 39,
                          'firstLine': 4,
                          'lastLine': 4,
                          'firstColumn': 5,
                          'lastColumn': 13,
                          'symbol': 'implicitCallStmt_InBlock',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 31,
                              'end': 39,
                              'firstLine': 4,
                              'lastLine': 4,
                              'firstColumn': 5,
                              'lastColumn': 13,
                              'symbol': 'iCS_B_ProcedureCall',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 31,
                                  'end': 37,
                                  'firstLine': 4,
                                  'lastLine': 4,
                                  'firstColumn': 5,
                                  'lastColumn': 11,
                                  'symbol': 'certainIdentifier',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 31,
                                      'end': 37,
                                      'firstLine': 4,
                                      'lastLine': 4,
                                      'firstColumn': 5,
                                      'lastColumn': 11,
                                      'token': 'IDENTIFIER',
                                      'type': 'token',
                                      'text': 'msgbox'
                                    }
                                  ],
                                  'ruleIndex': 202,
                                  'internalRuleIndex': 334,
                                  'id': 36
                                },
                                {
                                  'start': 38,
                                  'end': 39,
                                  'firstLine': 4,
                                  'lastLine': 4,
                                  'firstColumn': 12,
                                  'lastColumn': 13,
                                  'symbol': 'argsCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 38,
                                      'end': 39,
                                      'firstLine': 4,
                                      'lastLine': 4,
                                      'firstColumn': 12,
                                      'lastColumn': 13,
                                      'symbol': 'argCall',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 38,
                                          'end': 39,
                                          'firstLine': 4,
                                          'lastLine': 4,
                                          'firstColumn': 12,
                                          'lastColumn': 13,
                                          'symbol': 'valueStmt',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 38,
                                              'end': 39,
                                              'firstLine': 4,
                                              'lastLine': 4,
                                              'firstColumn': 12,
                                              'lastColumn': 13,
                                              'symbol': 'literal',
                                              'type': 'symbol',
                                              'children': [
                                                {
                                                  'start': 38,
                                                  'end': 39,
                                                  'firstLine': 4,
                                                  'lastLine': 4,
                                                  'firstColumn': 12,
                                                  'lastColumn': 13,
                                                  'token': 'INTEGERLITERAL',
                                                  'type': 'token',
                                                  'text': '2'
                                                }
                                              ],
                                              'ruleIndex': 97,
                                              'internalRuleIndex': 200,
                                              'id': 47
                                            }
                                          ],
                                          'ruleIndex': 88,
                                          'internalRuleIndex': 336,
                                          'id': 39,
                                          'isWrap': true
                                        }
                                      ],
                                      'ruleIndex': 55,
                                      'internalRuleIndex': 144,
                                      'id': 38
                                    }
                                  ],
                                  'ruleIndex': 54,
                                  'internalRuleIndex': 143,
                                  'id': 37
                                }
                              ],
                              'ruleIndex': 53,
                              'internalRuleIndex': 141,
                              'id': 35
                            }
                          ],
                          'ruleIndex': 51,
                          'internalRuleIndex': 137,
                          'id': 34
                        }
                      ],
                      'ruleIndex': 18,
                      'internalRuleIndex': 60,
                      'id': 33
                    },
                    {
                      'start': 39,
                      'end': 40,
                      'firstLine': 4,
                      'lastLine': 5,
                      'firstColumn': 13,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 39,
                          'end': 40,
                          'firstLine': 4,
                          'lastLine': 5,
                          'firstColumn': 13,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 39,
                              'end': 40,
                              'firstLine': 4,
                              'lastLine': 5,
                              'firstColumn': 13,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n'
                            }
                          ],
                          'ruleIndex': 2,
                          'internalRuleIndex': 2,
                          'id': 54
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 9,
                      'id': 53
                    },
                    {
                      'start': 44,
                      'end': 52,
                      'firstLine': 5,
                      'lastLine': 5,
                      'firstColumn': 5,
                      'lastColumn': 13,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 44,
                          'end': 52,
                          'firstLine': 5,
                          'lastLine': 5,
                          'firstColumn': 5,
                          'lastColumn': 13,
                          'symbol': 'implicitCallStmt_InBlock',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 44,
                              'end': 52,
                              'firstLine': 5,
                              'lastLine': 5,
                              'firstColumn': 5,
                              'lastColumn': 13,
                              'symbol': 'iCS_B_ProcedureCall',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 44,
                                  'end': 50,
                                  'firstLine': 5,
                                  'lastLine': 5,
                                  'firstColumn': 5,
                                  'lastColumn': 11,
                                  'symbol': 'certainIdentifier',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 44,
                                      'end': 50,
                                      'firstLine': 5,
                                      'lastLine': 5,
                                      'firstColumn': 5,
                                      'lastColumn': 11,
                                      'token': 'IDENTIFIER',
                                      'type': 'token',
                                      'text': 'msgbox'
                                    }
                                  ],
                                  'ruleIndex': 202,
                                  'internalRuleIndex': 334,
                                  'id': 58
                                },
                                {
                                  'start': 51,
                                  'end': 52,
                                  'firstLine': 5,
                                  'lastLine': 5,
                                  'firstColumn': 12,
                                  'lastColumn': 13,
                                  'symbol': 'argsCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 51,
                                      'end': 52,
                                      'firstLine': 5,
                                      'lastLine': 5,
                                      'firstColumn': 12,
                                      'lastColumn': 13,
                                      'symbol': 'argCall',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 51,
                                          'end': 52,
                                          'firstLine': 5,
                                          'lastLine': 5,
                                          'firstColumn': 12,
                                          'lastColumn': 13,
                                          'symbol': 'valueStmt',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 51,
                                              'end': 52,
                                              'firstLine': 5,
                                              'lastLine': 5,
                                              'firstColumn': 12,
                                              'lastColumn': 13,
                                              'symbol': 'literal',
                                              'type': 'symbol',
                                              'children': [
                                                {
                                                  'start': 51,
                                                  'end': 52,
                                                  'firstLine': 5,
                                                  'lastLine': 5,
                                                  'firstColumn': 12,
                                                  'lastColumn': 13,
                                                  'token': 'INTEGERLITERAL',
                                                  'type': 'token',
                                                  'text': '3'
                                                }
                                              ],
                                              'ruleIndex': 97,
                                              'internalRuleIndex': 200,
                                              'id': 69
                                            }
                                          ],
                                          'ruleIndex': 88,
                                          'internalRuleIndex': 336,
                                          'id': 61,
                                          'isWrap': true
                                        }
                                      ],
                                      'ruleIndex': 55,
                                      'internalRuleIndex': 144,
                                      'id': 60
                                    }
                                  ],
                                  'ruleIndex': 54,
                                  'internalRuleIndex': 143,
                                  'id': 59
                                }
                              ],
                              'ruleIndex': 53,
                              'internalRuleIndex': 141,
                              'id': 57
                            }
                          ],
                          'ruleIndex': 51,
                          'internalRuleIndex': 137,
                          'id': 56
                        }
                      ],
                      'ruleIndex': 18,
                      'internalRuleIndex': 60,
                      'id': 55
                    },
                    {
                      'start': 52,
                      'end': 54,
                      'firstLine': 5,
                      'lastLine': 7,
                      'firstColumn': 13,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 52,
                          'end': 54,
                          'firstLine': 5,
                          'lastLine': 7,
                          'firstColumn': 13,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 52,
                              'end': 54,
                              'firstLine': 5,
                              'lastLine': 7,
                              'firstColumn': 13,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n\\\\n'
                            }
                          ],
                          'ruleIndex': 2,
                          'internalRuleIndex': 2,
                          'id': 76
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 9,
                      'id': 75
                    }
                  ],
                  'ruleIndex': 17,
                  'internalRuleIndex': 40,
                  'id': 10
                },
                {
                  'start': 58,
                  'end': 61,
                  'firstLine': 7,
                  'lastLine': 7,
                  'firstColumn': 5,
                  'lastColumn': 8,
                  'token': 'SUB',
                  'type': 'token',
                  'text': 'sub',
                  'error': {
                    'recovery': false,
                    'errorMessage': 'syntax error at line 7:\\\\n\\\\n    sub main\\\\n    msgbox 1\\\\n    msgbox 2\\\\n    msgbox 3\\\\n\\\\n    sub test\\\\n----^\\\\n    msgbox 4\\\\n    end sub\\\\n    \\\\n'END_SUB' expected.\\\\ncurrent token: 'SUB'.',
                    'tip': ''END_SUB' expected.\\\\ncurrent token: 'SUB'.',
                    'expected': [
                      'END_SUB'
                    ],
                    'symbol': 'subStmt',
                    'token': {
                      'text': 'sub',
                      'token': 'SUB',
                      't': 'SUB',
                      'start': 58,
                      'end': 61,
                      'firstLine': 7,
                      'lastLine': 7,
                      'firstColumn': 5,
                      'lastColumn': 8
                    }
                  }
                }
              ],
              'ruleIndex': 12,
              'internalRuleIndex': 34,
              'id': 6
            }
          ],
          'ruleIndex': 10,
          'internalRuleIndex': 29,
          'id': 5
        }
      ],
      'ruleIndex': 9,
      'internalRuleIndex': 24,
      'id': 4
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;
